[project]
name = "confmap"
version = "0.0.2"
description = "Conformal mapping algorithms CETM and BFF."
authors = [
    { name = "Ruslan Guseinov", email = "guseynov.ruslan@gmail.com" },
]
dependencies = [
    "numpy>=1.22.3",
    "matplotlib>=3.5.1",
    "scipy>=1.7.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Source = "https://github.com/russelmann/confmap"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
